RESOLVED FIXED 284590
Text doesn't load properly in Lockdown mode
https://bugs.webkit.org/show_bug.cgi?id=284590
Summary Text doesn't load properly in Lockdown mode
Vitor Roriz
Reported 2024-12-12 16:27:55 PST
Text doesn't load properly in Lockdown mode
Attachments
Vitor Roriz
Comment 1 2024-12-12 16:27:56 PST
Vitor Roriz
Comment 2 2024-12-12 18:44:10 PST
EWS
Comment 3 2024-12-15 10:39:49 PST
Committed 287854@main (a0c6667a0b87): <https://commits.webkit.org/287854@main> Reviewed commits have been landed. Closing PR #37885 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.