Tools/TestWebKitAPI/Tests/WebKitCocoa/LockdownModeFonts.mm
@@ -130,6 +130,43 @@ TEST(LockdownMode, AllowedFontLoadingAPI)
     }
 }
 
+TEST(LockdownMode, NotSupportedFontLoadingAPI)
+{
+    @autoreleasepool {
+        auto webViewConfiguration = adoptNS([WKWebViewConfiguration new]);
+        webViewConfiguration.get().defaultWebpagePreferences.lockdownModeEnabled = YES;
+        auto webView = adoptNS([[WKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:webViewConfiguration.get()]);
+        NSURL *url = [NSBundle.test_resourcesBundle URLForResource:@"ImmediateFont" withExtension:@"html"];
+        [webView loadRequest:[NSURLRequest requestWithURL:url]];
+        [webView _test_waitForDidFinishNavigation];
+
+        NSURL *fontURL = [NSBundle.test_resourcesBundle URLForResource:@"Ahem-CFF" withExtension:@"otf"];
+        NSData *fontData = [NSData dataWithContentsOfURL:fontURL];
+        NSError *error = nil;
+        NSMutableArray<NSNumber *> *array = [NSMutableArray arrayWithCapacity:fontData.length];
+        const auto* fontBytes = static_cast<const uint8_t*>(fontData.bytes);
+        for (NSUInteger i = 0; i < fontData.length; ++i)
+            [array addObject:[NSNumber numberWithUnsignedChar:fontBytes[i]]];
+        NSData *json = [NSJSONSerialization dataWithJSONObject:array options:0 error:&error];
+        auto encoded = adoptNS([[NSString alloc] initWithData:json encoding:NSUTF8StringEncoding]);
+
+        [webView objectByEvaluatingJavaScript:@""
+            "let target = document.getElementById('target');"
+            "let reference = document.getElementById('reference');"];
+        auto beforeTargetResult = static_cast<NSNumber *>([webView objectByEvaluatingJavaScript:@"target.offsetWidth"]).intValue;
+        [webView objectByEvaluatingJavaScript:[NSString stringWithFormat:@""
+            "let fontData = new Uint8Array(%@);"
+            "let font = new FontFace('WebFont', fontData);"
+            "document.fonts.add(font);"
+            "target.style.setProperty('font-family', 'WebFont, Helvetica');", encoded.get()]];
+        auto targetResult = static_cast<NSNumber *>([webView objectByEvaluatingJavaScript:@"target.offsetWidth"]).intValue;
+        auto referenceResult = static_cast<NSNumber *>([webView objectByEvaluatingJavaScript:@"reference.offsetWidth"]).intValue;
+
+        EXPECT_NE(beforeTargetResult, targetResult);
+        EXPECT_EQ(targetResult, referenceResult);
+    }
+}
+
 TEST(LockdownMode, AllowedFont)
 {
     @autoreleasepool {
